--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<div class="center">
 		<div class="mb-3" style="padding-top: 50px">
 		  <label for="input" class="form-label">Protótipo de busca para Recursos Educacionais Abertos de Programação Introdutória:</label>
-		  <input type="email" class="form-control" id="input" placeholder="variável">
+		  <input type="email" class="form-control" id="input" placeholder="variáveis">
 		</div>
 		<div class="col-auto">
     		<button type="submit" class="btn btn-primary mb-3" onclick="test(false)">Busca Básica</button>
